--- a/Dima.Api/appsettings.json
+++ b/Dima.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "FrontendUrl": "http://localhost:0000/",
-  "BackendUrl": "http://localhost:5228/",
+  "FrontendUrl": "http://localhost:5264",
+  "BackendUrl": "http://localhost:5228",
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
